--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "angular-task-for-croco",
+  "homepage": "https://generalsimus.github.io/angular-project-template/",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
